--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -1,137 +1,97 @@
-# Place a copy of this config to ~/.aerospace.toml
-# After that, you can edit ~/.aerospace.toml to your liking
-
-# You can use it to add commands that run after login to macOS user session.
-# 'start-at-login' needs to be 'true' for 'after-login-command' to work
-# Available commands: https://nikitabobko.github.io/AeroSpace/commands
 after-login-command = []
-
-# You can use it to add commands that run after AeroSpace startup.
-# 'after-startup-command' is run after 'after-login-command'
-# Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = ['exec-and-forget sketchybar']
+exec-on-workspace-change = ['/bin/bash', '-c',
+    'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
+]
 
-# Start AeroSpace at login
 start-at-login = true
-# Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 
-# See: https://nikitabobko.github.io/AeroSpace/guide#layouts
-# The 'accordion-padding' specifies the size of accordion padding
-# You can set 0 to disable the padding feature
-accordion-padding = 30
-
-# Possible values: tiles|accordion
+accordion-padding = 150
 default-root-container-layout = 'tiles'
 
-# Possible values: horizontal|vertical|auto
-# 'auto' means: wide monitor (anything wider than high) gets horizontal orientation,
-#               tall monitor (anything higher than wide) gets vertical orientation
 default-root-container-orientation = 'auto'
 
-# Mouse follows focus when focused monitor changes
-# Drop it from your config, if you don't like this behavior
-# See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
-# See https://nikitabobko.github.io/AeroSpace/commands#move-mouse
-# Fallback value (if you omit the key): on-focused-monitor-changed = []
-on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
+key-mapping.preset = 'qwerty'
 
-# Notify Sketchybar about workspace change
-exec-on-workspace-change = ['/bin/bash', '-c',
-    'sketchybar --trigger aerospace_workspace_change FOCUSED=$AEROSPACE_FOCUSED_WORKSPACE'
-]
+#on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
+#on-focus-changed = "move-mouse window-lazy-center"
 
-# You can effectively turn off macOS "Hide application" (cmd-h) feature by toggling this flag
-# Useful if you don't use this macOS feature, but accidentally hit cmd-h or cmd-alt-h key
-# Also see: https://nikitabobko.github.io/AeroSpace/goodness#disable-hide-app
-automatically-unhide-macos-hidden-apps = false
-
-# Possible values: (qwerty|dvorak)
-# See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
-[key-mapping]
-preset = 'qwerty'
-
-# Gaps between windows (inner-*) and between monitor edges (outer-*).
-# Possible values:
-# - Constant:     gaps.outer.top = 8
-# - Per monitor:  gaps.outer.top = [{ monitor.main = 16 }, { monitor."some-pattern" = 32 }, 24]
-#                 In this example, 24 is a default value when there is no match.
-#                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
-#                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
 inner.horizontal = 18
 inner.vertical =   18
 outer.left =       18
-outer.bottom =     18
-outer.top =        51
+outer.bottom =     30
+outer.top =        60
 outer.right =      18
 
-# 'main' binding mode declaration
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
-# 'main' binding mode must be always presented
-# Fallback value (if you omit the key): mode.main.binding = {}
+# Assigning workspaces to monitors (main and secondary)
+[workspace-to-monitor-force-assignment]
+1 = 'main'      # Workspace 1 will always appear on the main monitor
+2 = 'main'      # Workspace 2 will always appear on the main monitor
+3 = 'main'      # Workspace 3 will always appear on the main monitor
+4 = 'main'      # Workspace 4 will always appear on the main monitor
+o = 'secondary' # Workspace 'o' will always appear on the secondary monitor
+w = 'secondary' # Workspace 'w' will always appear on the secondary monitor
+t = 'secondary' # Workspace 't' will always appear on the secondary monitor
+
 [mode.main.binding]
+# Window movement - Smart movement that adapts based on window count
+cmd-shift-left = 'exec-and-forget ~/.config/aerospace/smart_window_move.sh prev'
+cmd-shift-right = 'exec-and-forget ~/.config/aerospace/smart_window_move.sh next'
 
-# All possible keys:
-# - Letters.        a, b, c, ..., z
-# - Numbers.        0, 1, 2, ..., 9
-# - Keypad numbers. keypad0, keypad1, keypad2, ..., keypad9
-# - F-keys.         f1, f2, ..., f20
-# - Special keys.   minus, equal, period, comma, slash, backslash, quote, semicolon, backtick,
-#                   leftSquareBracket, rightSquareBracket, space, enter, esc, backspace, tab
-# - Keypad special. keypadClear, keypadDecimalMark, keypadDivide, keypadEnter, keypadEqual,
-#                   keypadMinus, keypadMultiply, keypadPlus
-# - Arrows.         left, down, up, right
+cmd-left = 'move left'
+cmd-down = 'move down'
+cmd-up = 'move up'
+cmd-right = 'move right'
 
-# All possible modifiers: cmd, alt, ctrl, shift
+# Space movement
+cmd-alt-left = 'workspace prev'
+cmd-alt-right = 'workspace next'
 
-# All possible commands: https://nikitabobko.github.io/AeroSpace/commands
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-# You can uncomment the following lines to open up terminal with alt + enter shortcut (like in i3)
-# alt-enter = '''exec-and-forget osascript -e '
-# tell application "Terminal"
-#     do script
-#     activate
-# end tell'
-# '''
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#layout
-alt-slash = 'layout tiles horizontal vertical'
-# alt-comma = 'layout accordion horizontal vertical'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-h = 'focus left'
-alt-j = 'focus down'
-alt-k = 'focus up'
-alt-l = 'focus right'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#move
-alt-shift-h = 'move left'
-alt-shift-j = 'move down'
-alt-shift-k = 'move up'
-alt-shift-l = 'move right'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#resize
-alt-shift-minus = 'resize smart -50'
-alt-shift-equal = 'resize smart +50'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-alt-1 = 'workspace 1'
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-
+alt-1 = 'workspace 1'    # Workspace 1 on the main monitor
+alt-2 = 'workspace 2'    # Workspace 2 on the main monitor
+alt-3 = 'workspace 3'    # Workspace 3 on the main monitor
+alt-4 = 'workspace 4'    # Workspace 4 on the main monitor
+alt-o = 'workspace o'    # Workspace o on the secondary monitor
+alt-w = 'workspace w'    # Workspace w on the secondary monitor
+alt-t = 'workspace t'    # Workspace t on the secondary monitor
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'move-node-to-workspace 1'
-alt-shift-2 = 'move-node-to-workspace 2'
-alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-5 = 'move-node-to-workspace 5'
+alt-shift-1 = 'move-node-to-workspace 1'    # Move node to workspace 1 (main)
+alt-shift-2 = 'move-node-to-workspace 2'    # Move node to workspace 2 (main)
+alt-shift-3 = 'move-node-to-workspace 3'    # Move node to workspace 3 (main)
+alt-shift-4 = 'move-node-to-workspace 4'    # Move node to workspace 4 (main)
+alt-shift-o = 'move-node-to-workspace o'    # Move node to workspace o (secondary)
+alt-shift-w = 'move-node-to-workspace w'    # Move node to workspace w (secondary)
+alt-shift-t = 'move-node-to-workspace t'    # Move node to workspace t (secondary)
 
+alt-shift-f = 'fullscreen'
+
+
+# Advanced Tiling
+alt-shift-left = 'join-with left'
+alt-shift-down = 'join-with down'
+alt-shift-up = 'join-with up'
+alt-shift-right = 'join-with right'
+
+# See: https://nikitabobko.github.io/AeroSpace/commands#focus
+alt-left = 'focus left'
+alt-down = 'focus down'
+alt-up = 'focus up'
+alt-right = 'focus right'
+
+# See: https://nikitabobko.github.io/AeroSpace/commands#move
+alt-ctrl-left = 'move left'
+alt-ctrl-down = 'move down'
+alt-ctrl-up = 'move up'
+alt-ctrl-right = 'move right'
+
+# Open Apps
+alt-enter = 'exec-and-forget open -na "wezterm"'
+ctrl-alt-d = 'exec-and-forget open -a "Finder" ~'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
@@ -141,18 +101,68 @@ alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-semicolon = 'mode service'
 
+alt-shift-r = 'mode resize'
+
+# See: https://nikitabobko.github.io/AeroSpace/commands#layout
+alt-slash = 'layout tiles horizontal vertical'
+alt-comma = 'layout accordion horizontal vertical'
+
+[mode.resize.binding]
+h = 'resize width -50'
+j = 'resize height +50'
+k = 'resize height -50'
+l = 'resize width +50'
+b = 'balance-sizes'
+
+
+# See: https://nikitabobko.github.io/AeroSpace/commands#resize
+minus = 'resize smart -50'
+equal = 'resize smart +50'
+
+enter = 'mode main'
+esc = 'mode main'
+
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
 [mode.service.binding]
 esc = ['reload-config', 'mode main']
 r = ['flatten-workspace-tree', 'mode main'] # reset layout
+#s = ['layout sticky tiling', 'mode main'] # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
 f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
 backspace = ['close-all-windows-but-current', 'mode main']
 
-# sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
-#s = ['layout sticky tiling', 'mode main']
+[[on-window-detected]]
+if.app-name-regex-substring = 'ghostty'
+run = "move-node-to-workspace 4 --focus-follows-window"
 
-alt-shift-h = ['join-with left', 'mode main']
-alt-shift-j = ['join-with down', 'mode main']
-alt-shift-k = ['join-with up', 'mode main']
-alt-shift-l = ['join-with right', 'mode main']
+[[on-window-detected]]
+if.app-name-regex-substring = 'teams'
+run = "move-node-to-workspace o --focus-follows-window"
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'music'
+run = "move-node-to-workspace w "
+
+[[on-window-detected]]
+if.app-id = 'org.mozilla.com.zen.browser'
+run = "move-node-to-workspace 3 --focus-follows-window"
+
+[[on-window-detected]]
+if.app-id = 'arc'
+run = "move-node-to-workspace 3 --focus-follows-window"
+
+[[on-window-detected]]
+if.app-id = 'obsidian'
+run = "move-node-to-workspace 2 --focus-follows-window"
+
+[[on-window-detected]]
+if.app-id = 'motion'
+run = "move-node-to-workspace 2 --focus-follows-window"
+
+[[on-window-detected]]
+if.window-title-regex-substring = 'Picture-in-Picture'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.window-title-regex-substring = 'Parent process Browser Toolbox'
+run = 'layout floating'
